src/pages/SingleReviewPage/SingleReviewPage.module.scss
// 標題名字、ICON
.reviewInfo {
  width: 100%;
  display: flex;
  flex-direction: column;
  .authorAndButton {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
    .author {
      margin-top: 20px;
    }
    .authorInfo,
    .nameAndFollow,
    .author {
      display: flex;
      align-items: center;
    }
    .authorName {
      width: 200px;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      color: var(--main-color);
    }
    .avatar {
      width: 40px;
      height: 40px;
      object-fit: cover;
      border-radius: 50px;
      margin-right: 8px;
    }
    span + span::before {
      content: '|';
      margin: 0 8px;
      color: var(--main-text);
    }
    .buttonContainer {
      margin: 0 12px;
      width: 88px;
    }
  }
  .recommend {
    display: flex;
    align-items: center;
    margin-top: 12px;
    flex-wrap: wrap;
    .icon {
      display: flex;
      align-items: center;
      margin-right: 18px;
    }
    span {
      margin-right: 12px;
    }
  }
  .tag {
    margin-top: 12px;
  }
  .socialButtons {
    display: flex;
    gap: 10px;
    height: 32px;
    margin-top: 20px;
    .like,
    .favorite,
    .report,
    .share {
      background-color: var(--primary-color);
      box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.1);
      border-radius: 4px;
      padding: 0 16px;
      display: flex;
      align-items: center;
      justify-content: center;
      span {
        color: white;
        font-size: 14px;
      }
      &:hover {
        background-color: #44b2da;
      }
    }
    .share {
      position: relative;
    }
    .icon {
      height: 16px;
      width: 16px;
      margin-right: 8px;
    }
    .favoriteActive {
      fill: #ffc542;
      fill-opacity: 1;
    }
    .likeActive {
      fill: #fc5a5a;
      fill-opacity: 1;
    }
  }
}
.reviewPhoto {
  margin: 25px 0;
  width: 100%;
  padding-top: 66.67%;
  position: relative;
  overflow: hidden;
}
.photo {
  width: 100%;
  position: absolute;
  top: 50%;
  left: 0;
  height: auto;
  transform: translateY(-50%);
}
.divide {
  position: relative;
  span {
    min-width: 320px;
    background-color: white;
    position: absolute;
    top: 0;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}
.text {
  margin-top: 40px;
  line-height: 32px;
  white-space: pre-wrap;
}
.title,
.text {
  overflow-wrap: break-word;
}

@media (max-width: 767px) {
  .title h2 {
    font-size: 32px;
  }

  .reviewInfo {
    .authorAndButton {
      .authorInfo {
        flex-direction: column;
        align-items: flex-start;
      }
      .otherInfo {
        margin-top: 8px;
      }
    }
    .socialButtons {
      gap: 0;
      position: fixed;
      bottom: 0;
      left: 0;
      width: 100vw;
      height: 48px;
      z-index: 9;
      .icon {
        height: 20px;
        width: 20px;
      }
      .like,
      .favorite,
      .report,
      .share {
        width: 100%;
        border-radius: 0;
        box-shadow: none;
      }
      .like {
        background-color: #fba6b0;
        &:hover {
          background-color: #fbb2bb;
        }
      }
      .favorite {
        background-color: #ffb64f;
        &:hover {
          background-color: #ffbe62;
        }
      }
      .report {
        background-color: #707985;
        &:hover {
          background-color: #797e85;
        }
      }
      .share {
        background-color: #5989ed;
        &:hover {
          background-color: #6995f4;
        }
      }
    }
  }
}

